--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "background_color": "#fff",
   "display": "standalone",
-  "homepage_url": "https://app.uniswap.org",
+  "homepage_url": "https://crdt.io/",
   "icons": [
     {
       "src": "./images/192x192_App_Icon.png",
@@ -17,7 +17,7 @@
     }
   ],
   "orientation": "portrait",
-  "name": "Uniswap",
+  "name": "CRDT",
   "short_name": "Uniswap",
   "start_url": ".",
   "theme_color": "#ff007a"
